--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prepare": "npm run build",
+    "use:npmReadme": "move-file README.md git.README.md && move-file NPM.README.md README.md",
+    "use:gitReadme": "move-file README.md npm.README.md && move-file git.README.md README.md",
+    "prepack": "npm run use:npmReadme",
+    "postpack": "npm run use:gitReadme",
+    "precompress": "npm run build",
+    "compress": "npx browserify lib/fpv2.js | npx uglifyjs -cmo lib/fpv2.min.js"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +25,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "footprint-client": "^2.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
